Cors configuration parameters arrays list